<resources>
    <string name="app_name">Milk Application</string>
    <string name="OpenDrawer">Open navigation drawer</string>
    <string name="CloseDrawer">Close navigation drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dropdown_name">dropDownMenuExample</string>
    <string-array name="languages">
        <item>C</item>
        <item>C++</item>
        <item>Java</item>
        <item>JavaScript</item>
        <item>VisualBasic</item>
    </string-array>
    <string name="app_title_part_1">Milkwala</string>
    <string name="app_title_part_2">Dairy</string>
    <string name="str_email">Email :</string>
    <string name="str_password">Password :</string>
    <string name="str_login">Login</string>
    <string name="err_empty_email">Please enter an Email address.</string>
    <string name="err_invalid_email">Please enter a valid Email address.</string>
    <string name="err_empty_pwd">Please enter a Password.</string>
    <string name="err_pwd_min_length">Password must be at least 6 characters.</string>
    <string name="title_monthly_sale"><u>Monthly Sales:</u></string>
    <string name="total_customers">Total Customers : %d</string>
    <string name="total_products">Total Products : %d</string>
    <string name="total_suppliers">Total Suppliers : %d</string>
    <string name="title_yesterdays_status"><b>Yester\nday\'s \nStatus:</b></string>
    <string name="title_todays_status"><b>Today\'s \nStatus :</b></string>
    <string name="total_sale">Total Sale:</string>
    <string name="total_waste">Wastage:</string>
    <string name="total_supplier_sub_text">%d Suppliers</string>
    <string name="total_product_sub_text">%d Products</string>
    <string name="total_deliver_sub_text">%d Delivery Boys</string>
    <string name="total_route_sub_text">%d Routes</string>
    <string name="total_customer_sub_text">%d Customers</string>
    <string name="total_deliver_for_route_sub_text">%d Delivery Boys For Routes</string>
    <string name="total_supplier_for_product_sub_text">%d Suppliers For Products</string>
    <string name="total_route_for_customer_sub_text">%d Routes For Customers</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_master_info">Master Info</string>
    <string name="title_today_received">Today\'s Received stock</string>
    <string name="title_today_distribution">Today\'s Distribution</string>
    <string name="title_my_profile">My Profile</string>
    <string name="title_about">About</string>
    <string name="title_logout">Logout</string>
    <string name="title_suppliers">Suppliers</string>
    <string name="title_products">Products</string>
    <string name="title_customers">Customers</string>
    <string name="title_delivery_boys">Delivery Boys</string>
    <string name="master_info_total_suppliers">%d suppliers</string>
    <string name="master_info_total_customers">%d customers</string>
    <string name="master_info_total_products">%d products</string>
    <string name="master_info_total_delivery_boys">%d delivery boys</string>
    <string name="hint_search">Search</string>
    <string name="btn_add_new_supplier">Add new supplier</string>
    <string name="btn_add_new_product">Add new product</string>
    <string name="btn_add_new_customer">Add new customer</string>
    <string name="btn_add_new_delivery_person">Add new Delivery Person</string>
    <string name="title_supplier_name">Supplier Name :</string>
    <string name="hint_enter_supplier_name">Enter Supplier Name</string>
    <string name="title_supplier_address">Supplier Address :</string>
    <string name="hint_enter_supplier_address">Enter supplier address</string>
    <string name="title_supplier_number">Mobile Number :</string>
    <string name="hint_enter_supplier_mobile1">Enter Mobile Number</string>
    <string name="title_supplier_alternate_number">Alternate Number :</string>
    <string name="hint_enter_supplier_mobile2">Alternate Mobile Number</string>
    <string name="err_empty_supplier_name">Supplier name should not be empty.</string>
    <string name="err_min_length_supplier_name">Supplier name should be minimum of 3 characters</string>
    <string name="err_empty_supplier_addr">Supplier address should not be empty.</string>
    <string name="err_min_length_supplier_addr">Supplier address should be minimum of 8 characters</string>
    <string name="err_empty_supplier_number">Mobile number should not be empty.</string>
    <string name="supplier_added_success">Supplier Added successfully.</string>
    <string name="supplier_added_error">Failed To Add Product.</string>
    <string name="empty_supplier_list">Supplier list is empty. Let\'s start adding new supplier.</string>
    <string name="products_of_supplier">%1$d Products</string>
    <string name="title_supplier_details">Supplier Details</string>
    <string name="btn_delete_supplier">Delete Supplier</string>
    <string name="no_supplier_found">No Supplier Found</string>
    <string name="title_delete_supplier">Delete Supplier - %1$s</string>
    <string name="msg_delete_supplier_confirmation">Are you sure to delete this supplier?</string>
    <string name="msg_delete_supplier_desc">Please Note - If you delete this supplier, then all the products and associated data will get removed.</string>
    <string name="msg_delete_supplier_success">Supplier deleted successfully.</string>
    <string name="empty_supplier_list_message">Please Add A Supplier.\n To Add, please touch on the Add Button on Bottom.</string>
    <string name="network_error">Network Error please try again later.</string>
    <string name="supplier_list_is_empty_in_product_list">Supplier list is empty.</string>
    <string name="empty_product_list">Product list is empty.</string>
    <string name="title_product_name">Product Name :</string>
    <string name="hint_enter_product_name">Enter Product Name</string>
    <string name="hint_enter_product_supp_rate">Enter Product SupplierRate</string>
    <string name="hint_enter_product_wholesale_rate">Enter Product WholesaleRate</string>
    <string name="hint_enter_product_mrp_rate">Enter Product MrpRetailerRate</string>
    <string name="str_supplier_rate">Supplier Rate :</string>
    <string name="str_wholesale_rate">Wholesale Rate :</string>
    <string name="str_mrp">MRP :</string>
    <string name="hint_supplier_rate">100</string>
    <string name="hint_vendor_rate">110</string>
    <string name="hint_mrp">115</string>
    <string name="str_rs">Rs.</string>
    <string name="title_product_details">%1$s Details</string>
    <string name="btn_delete_product">Delete Product</string>
    <string name="title_delete_product">Delete - %1$s</string>
    <string name="msg_delete_product_desc">Please Note - Deleting this product will remove all the product related information, permanently.</string>
    <string name="msg_delete_product_confirmation">Are you sure to delete this product?</string>
    <string name="msg_delete_product_success">Product deleted successfully.</string>
    <string name="err_empty_product_name">Product name should not be empty.</string>
    <string name="err_min_length_product_name">Product name should be minimum of 3 characters</string>
    <string name="err_empty_product_mrp">Product MRP should not be empty.</string>
    <string name="no_product_found">No Product Found</string>
    <string name="err_empty_unit">Please select the unit from the dropdown list.</string>
    <string name="err_empty_type">Please select the type from the dropdown list.</string>
    <string name="err_empty_supplier_rate">Supplier rate should not be empty.</string>
    <string name="err_empty_vendor_rate">Vendor rate should not be empty.</string>
    <string name="msg_product_added_success">Product added successfully!</string>
    <string name="empty_product_list_message">Please Add A Product.\n To Add, please touch on the Add Button on Bottom.</string>
    <string name="empty_route_list">Route list is empty.</string>
    <string name="title_route_name">Route Name :</string>
    <string name="title_route_No">Route No :</string>
    <string name="title_route_desc">Route Desc :</string>
    <string name="hint_enter_route_name">Enter Route Name</string>
    <string name="hint_enter_route_no">Enter Route No</string>
    <string name="hint_enter_route_desc">Enter Route Description</string>
    <string name="err_empty_route_name">Route name should not be empty.</string>
    <string name="err_empty_route_no">Route no should not be empty.</string>
    <string name="err_empty_route_desc">Route desc should not be empty.</string>
    <string name="msg_route_added_success">Route added successfully!</string>
    <string name="failed_add_route_data">Failed to add Route data</string>
    <string name="failed_fetch_route_data">Failed to fetch Route data</string>
    <string name="title_route_details">Route Details</string>
    <string name="btn_delete_route">Delete Route</string>
    <string name="msg_delete_route_confirmation">Are you sure to delete this route?</string>
    <string name="msg_delete_route_desc">Please Note - Deleting this route will remove all the route related information, permanently.</string>
    <string name="msg_delete_route_success">Route deleted successfully.</string>
    <string name="no_route_found">No Route Found</string>
    <string name="str_update_route_title">Update %1$s Route</string>
    <string name="success_update_route">Route updated successfully</string>
    <string name="routes_of_delivery_person">%1$d Routes</string>
    <string name="empty_route_list_message">Please Add A Route.\n To Add, please touch on the Add Button on Bottom.</string>
    <string name="hint_delivery_name">Enter Delivery person name</string>
    <string name="hint_delivery_email">Enter Delivery person email</string>
    <string name="hint_delivery_password">Enter Delivery person password</string>
    <string name="hint_delivery_address">Enter Delivery person Address</string>
    <string name="hint_delivery_city">Enter Delivery person city</string>
    <string name="hint_delivery_mobile1">Enter Delivery person contact no</string>
    <string name="hint_delivery_mobile2">Enter Delivery person alter no</string>
    <string name="title_delivery_boy_name">Name :</string>
    <string name="title_delivery_boy_email">Email :</string>
    <string name="title_delivery_boy_password">Password :</string>
    <string name="title_delivery_boy_address">Address :</string>
    <string name="title_delivery_boy_city">City :</string>
    <string name="title_delivery_boy_contact1">Contact No :</string>
    <string name="title_delivery_boy_contact2">Alternate No :</string>
    <string name="no_delivery_person_found">No Delivery Person Found</string>
    <string name="err_empty_delivery_name">Delivery person name should not be empty.</string>
    <string name="err_min_length_delivery_name">Delivery person name should be minimum of 3 characters</string>
    <string name="err_empty_delivery_addr">Delivery person address should not be empty.</string>
    <string name="err_min_length_delivery_addr">Delivery person address should be minimum of 8 characters</string>
    <string name="hint_customer_name">Enter Customer Name</string>
    <string name="hint_customer_email">Enter Customer Email</string>
    <string name="customer_type">Type :</string>
    <string name="hint_customer_address">Enter Customer Address</string>
    <string name="str_name">Name :</string>
    <string name="str_address">Address :</string>
    <string name="str_mobile_number">Mobile Number :</string>
    <string name="hint_mobile_number">1234567890</string>
    <string name="str_alt_number">Alternate \nNumber :</string>
    <string name="str_unit">Unit :</string>
    <string name="str_city">City :</string>
    <string name="supp_add_btn">Add</string>
    <string name="space">-</string>
    <string name="product_qty">Qty</string>
    <string name="hint_product_amount">Amt</string>
</resources>