<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardColor"
    tools:context=".ui.masterinfo.customer.AddNewCustomerFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_add_new_customer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="10dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="5">

                <TextView
                    style="@style/commonTextViewLabel"
                    android:layout_width="0dp"
                    android:layout_weight="1.8"
                    android:text="@string/str_name" />

                <EditText
                    android:id="@+id/etCustomerName"
                    style="@style/commonInputEditText"
                    android:layout_width="0dp"
                    android:layout_weight="3.2"
                    android:autofillHints=""
                    android:hint="@string/hint_customer_name" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:weightSum="5">

                <TextView
                    style="@style/commonTextViewLabel"
                    android:layout_width="0dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1.8"
                    android:text="@string/str_address" />

                <EditText
                    android:id="@+id/etCustomerAddress"
                    style="@style/commonInputEditText"
                    android:layout_width="0dp"
                    android:layout_weight="3.2"
                    android:autofillHints="postalAddress"
                    android:gravity="top"
                    android:hint="@string/hint_customer_address"
                    android:inputType="none"
                    android:maxLines="5"
                    android:minLines="4" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:weightSum="5">

                <TextView
                    style="@style/commonTextViewLabel"
                    android:layout_width="0dp"
                    android:layout_weight="1.8"
                    android:text="@string/str_email" />

                <EditText
                    android:id="@+id/etCustomerEm"
                    style="@style/commonInputEditText"
                    android:layout_width="0dp"
                    android:layout_weight="3.2"
                    android:autofillHints="email"
                    android:hint="@string/hint_customer_email" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:weightSum="5">

                <TextView
                    style="@style/commonTextViewLabel"
                    android:layout_width="0dp"
                    android:paddingBottom = "6dp"
                    android:layout_weight="1.8"
                    android:text="@string/customer_type" />

                <Spinner
                    android:id="@+id/spCustomerType"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="3.2"
                    android:background="@android:drawable/btn_dropdown"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:weightSum="5">

                <TextView
                    style="@style/commonTextViewLabel"
                    android:layout_width="0dp"
                    android:layout_weight="1.8"
                    android:text="@string/str_mobile_number" />

                <EditText
                    android:id="@+id/etCustomerMobile"
                    style="@style/commonInputEditText"
                    android:layout_width="0dp"
                    android:layout_weight="3.2"
                    android:autofillHints="phone"
                    android:hint="@string/hint_mobile_number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:weightSum="5">

                <TextView
                    style="@style/commonTextViewLabel"
                    android:layout_width="0dp"
                    android:paddingBottom = "6dp"
                    android:layout_weight="1.8"
                    android:text="@string/str_alt_number" />

                <EditText
                    android:id="@+id/etCustomerAlternateMobile"
                    style="@style/commonInputEditText"
                    android:layout_width="0dp"
                    android:layout_weight="3.2"
                    android:autofillHints="phone"
                    android:hint="@string/hint_mobile_number" />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <View style="@style/lineHorizontal" />

        <Button
            android:id="@+id/btnAddNewCustomer"
            style="@style/commonButton"
            android:text="@string/supp_add_btn" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>