<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardColor"
    tools:context=".ui.masterinfo.deliveryPerson.AddNewDeliverPersonFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_add_new_delivery_person"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp"
        app:cardMaxElevation="10dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="5">

                <TextView
                    style="@style/commonTextViewLabel"
                    android:layout_width="0dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1.8"
                    android:text="@string/str_name" />

                <EditText
                    android:id="@+id/etDeliveryPersonName"
                    style="@style/commonInputEditText"
                    android:layout_width="0dp"
                    android:layout_weight="3.2"
                    android:autofillHints=""
                    android:hint="@string/hint_delivery_name" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:weightSum="5">

                <TextView
                    style="@style/commonTextViewLabel"
                    android:layout_width="0dp"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1.8"
                    android:text="@string/str_address" />

                <EditText
                    android:id="@+id/etDeliveryPersonAddress"
                    style="@style/commonInputEditText"
                    android:layout_width="0dp"
                    android:layout_weight="3.2"
                    android:autofillHints=""
                    android:gravity="top"
                    android:hint="@string/hint_delivery_address"
                    android:inputType="none"
                    android:maxLines="6"
                    android:minLines="4" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:weightSum="5">

                <TextView
                    style="@style/commonTextViewLabel"
                    android:layout_width="0dp"
                    android:layout_weight="1.8"
                    android:text="@string/str_city" />

                <EditText
                    android:id="@+id/etDeliveryPersonCity"
                    style="@style/commonInputEditText"
                    android:layout_width="0dp"
                    android:layout_weight="3.2"
                    android:autofillHints="none"
                    android:hint="@string/hint_delivery_city"
                    android:maxLines="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:weightSum="5">

                <TextView
                    style="@style/commonTextViewLabel"
                    android:layout_width="0dp"
                    android:layout_weight="1.8"
                    android:text="@string/str_mobile_number" />

                <EditText
                    android:id="@+id/etDeliveryPersonContact"
                    style="@style/commonInputEditText"
                    android:layout_width="0dp"
                    android:layout_weight="3.2"
                    android:autofillHints="none"
                    android:hint="@string/hint_mobile_number"
                    android:inputType="number" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:weightSum="5">

                <TextView
                    style="@style/commonTextViewLabel"
                    android:layout_width="0dp"
                    android:layout_weight="1.8"
                    android:text="@string/str_alt_number" />

                <EditText
                    android:id="@+id/etDeliveryPersonAlterNo"
                    style="@style/commonInputEditText"
                    android:layout_width="0dp"
                    android:layout_weight="3.2"
                    android:autofillHints="none"
                    android:hint="@string/hint_mobile_number"
                    android:inputType="number" />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <View style="@style/lineHorizontal" />

        <Button
            android:id="@+id/btnAddNewDeliveryPerson"
            style="@style/commonButton"
            android:text="@string/supp_add_btn" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>