<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/cardColor"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="5"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="7dp"
            android:layout_marginBottom="10dp"
            android:layout_weight="3"
            style="@style/commonInputEditText"
            android:orientation="horizontal"
            android:padding="3dp">

            <TextView
                android:id="@+id/cProductDetailsName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_gravity="center_vertical"
                android:layout_weight="1.3"
                android:text="@string/title_products"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight="0.2"
                android:text="@string/space"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/cProductDetailsUnit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:text="@string/str_unit"
                android:layout_gravity="center_vertical"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="normal" />


        </LinearLayout>

        <EditText
            android:id="@+id/cProductEditQuantity"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.7"
            style="@style/commonInputEditText"
            android:hint="@string/product_qty"
            android:maxLines="1"
            android:padding="10dp"
            android:textSize="16sp"
            android:autofillHints="" />

        <EditText
            android:id="@+id/customerTotalAmount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_weight="1.2"
            style="@style/commonInputEditText"
            android:hint="@string/hint_product_amount"
            android:padding="10dp"
            android:textSize="16sp"
            android:autofillHints="" />

    </LinearLayout>
</LinearLayout>




